--- a/Graphs/pom.xml
+++ b/Graphs/pom.xml
@@ -60,6 +60,11 @@
             <!--<version>4.2.2.RELEASE</version>-->
         <!--</dependency>-->
 
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.jackson</groupId>-->
+            <!--<artifactId>jackson-mapper-asl</artifactId>-->
+            <!--<version>1.9.12</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <properties>
